[package]
name = "gmssl-errors"
version = "0.1.3"
authors = ["Jason Honor<jasonhonor@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Custom error library support for the gmssl crate."
repository = "https://github.com/tujili2022/rust-gmssl.git"
readme = "README.md"
categories = ["api-bindings"]

[dependencies]
cfg-if = "1.0"
libc = "0.2"

gmssl-sys = { version = "0.1" }

[dev-dependencies]
