[package]
name = "gmssl-macros"
version = "0.1.3"
edition = "2018"
license = "MIT/Apache-2.0"
description = "Internal macros used by the gmssl crate."
repository = "https://github.com/tujili2022/rust-gmssl.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }